<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlways|snap"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edt_search"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/search_height"
                    android:background="@android:color/transparent"
                    android:hint="Search something"
                    android:padding="@dimen/search_edittext_padding"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorSecondary"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"/>
                <com.ornach.magicicon.IconButton
                    android:id="@+id/btn_search"
                    android:layout_width="@dimen/search_icon_size"
                    android:layout_height="@dimen/search_icon_size"
                    app:mi_typeface="font_awesome"
                    app:mi_fontText="&#xf002;"
                    app:mi_iconColor="@color/textColorSecondary"/>
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="#FFF">

           <!-- <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />-->

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />
            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_4" />
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <!--<android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
    <include layout="@layout/content_main"/>
</android.support.design.widget.CoordinatorLayout>